--- a/views/index.html
+++ b/views/index.html
@@ -177,7 +177,7 @@
                     <div class="text-content">
                         <h3>Welcome To SMART DUSTBIN </h3>
                         <h3>by </h3>
-                        <h5><strong>UNNAT BHARAT ABHIYAN CELL,<br> Government College of Engineering, Nagpur.</strong></h5>
+                        <h5><strong>Unnat Bharat Abhiyan Cell,<br> GCOE, Nagpur.</strong></h5>
                         <a href="#about" class="main-stroked-button">KNOW MORE</a>
                         <a href="#contact-us" class="main-filled-button">CONTACT</a>
                     </div>
