--- a/views/index.html
+++ b/views/index.html
@@ -188,7 +188,7 @@
             <!-- Item -->
             <div class="item">
                 <div class="img-fill">
-                    <img src="images/solar.jpg" style="max-width:100%;
+                    <img src="images/solar-min.jpg" style="max-width:100%;
                     max-height:100%;"alt="">
                     <div class="text-content">
                         <h3 style="color: #000;">POWERD BY SOLAR SYSYTEM</h3>
@@ -202,7 +202,7 @@
             <!-- Item -->
             <div class="item">
                 <div class="img-fill">
-                    <img src="images/cloud.jpg" style="max-width:100%;
+                    <img src="images/cloud-min.jpg" style="max-width:100%;
                     max-height:100%;"alt="">
                     <div class="text-content">
                         <h3>REAL TIME STATUS DISPLAY</h3>
