--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
 
-    <title>UBA GCOEN</title>
+    <title>UBA Smart Dustbin</title>
+    <link rel="icon" href="images/GANDHI.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -441,7 +442,7 @@
 
     <!-- Footer -->
     <footer class="w-100 py-4 flex-shrink-0" id="foot">
-        <div class="container py-4 px-0 " >
+        <div class="container py-4 px-4 " >
             <div class="row gy-4 gx-5">
                 <div class="col-lg-4 col-md-6">
                     <iframe
