--- a/views/index.html
+++ b/views/index.html
@@ -20,9 +20,10 @@
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 
-    <link rel="stylesheet" href="./css/templatemo-breezed.css">
+    <link rel="stylesheet" href="/css/templatemo-breezed.css">
 
-    <!-- <link rel="stylesheet" href="./css/owl-carousel.css"> -->
+    <!-- <link rel="stylesheet" href="/css/owl-carousel.css"> -->
+    <!-- <link rel="stylesheet" href="/css/bootstrap.min.css"> -->
 
     <!-- <link rel="stylesheet" href="./css/lightbox.css"> -->
     <style>
@@ -146,7 +147,7 @@
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
-                        <ul class="nav">
+                        <ul class="nav" >
                             <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                             <li class="scroll-to-section"><a href="#about">About</a></li>
                             <li class="scroll-to-section"><a href="#status">Project</a></li>
@@ -556,13 +557,13 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <!-- jQuery -->
-    <!-- <script src="js/jquery-2.1.0.min.js"></script>
+    <script src="js/jquery-2.1.0.min.js"></script>
 
-    <script src="js/bootstrap.min.js"></script> -->
+    <!-- <script src="js/bootstrap.min.js"></script> --> -->
 
     <!-- Plugins -->
-    <!-- <script src="js/owl-carousel.js"></script> -->
-    <!-- <script src="js/scrollreveal.min.js"></script> -->
+    <script src="js/owl-carousel.js"></script>
+    <script src="js/scrollreveal.min.js"></script>
     <!-- <script src="js/waypoints.min.js"></script> -->
     <!-- <script src="js/jquery.counterup.min.js"></script> -->
     <!-- <script src="js/imgfix.min.js"></script> -->
