--- a/public/css/templatemo-breezed.css
+++ b/public/css/templatemo-breezed.css
@@ -1278,7 +1278,7 @@ contact
 
 #contact-us {
   padding: 120px 0px;
-  background-image: url(../images/dotted-map-bg.png);
+  /* background-image: url(../images/dotted-map-bg.png); */
   background-position: center center;
   background-repeat: no-repeat;
 }
