--- a/views/index.html
+++ b/views/index.html
@@ -559,7 +559,7 @@
     <!-- jQuery -->
     <script src="js/jquery-2.1.0.min.js"></script>
 
-    <!-- <script src="js/bootstrap.min.js"></script> --> -->
+    <!-- <script src="js/bootstrap.min.js"></script> --> 
 
     <!-- Plugins -->
     <script src="js/owl-carousel.js"></script>
